--- a/vpc-ecscluster-lb-fargate-tutorial/lb-fargate-svc/v1/pipeline_infrastructure/cloudformation.yaml
+++ b/vpc-ecscluster-lb-fargate-tutorial/lb-fargate-svc/v1/pipeline_infrastructure/cloudformation.yaml
@@ -596,17 +596,17 @@ Resources:
               RunOrder: 1
           Name: Build
 {%- for service_instance in service_instances %}
-{% if 'VPC-ECSCluster-Env-Production' in environment.name %}
-        - Actions:
-            - ActionTypeId:
-                Category: Approval
-                Owner: AWS
-                Provider: Manual
-                Version: '1'
-              InputArtifacts: []
-              Name: Approval
-              RunOrder: 1
-          Name: Preproduction_Approval
+# {% if 'VPC-ECSCluster-Env-Production' in environment.name %}
+#         - Actions:
+#             - ActionTypeId:
+#                 Category: Approval
+#                 Owner: AWS
+#                 Provider: Manual
+#                 Version: '1'
+#               InputArtifacts: []
+#               Name: Approval
+#               RunOrder: 1
+#           Name: Preproduction_Approval
 {% endif %}
         - Actions: # TODO: Add a manual approval step for all Prod environments before this action
             - ActionTypeId:
